[tool.poetry]
name = "llm_spider"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
nest-asyncio = "^1.6.0"
playwright = "^1.42.0"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
graphviz = "^0.20.3"
ipython = "^8.23.0"
playwright-stealth = "^1.0.6"
setuptools = ">=70.0.0"
grandalf = "^0.8"
langchain = ">=0.2.5"
langchain-community = ">=0.2.19"
langgraph = ">=0.2.60"
aiohttp = ">=3.10.11"
certifi = ">=2024.07.04"
urllib3 = ">=2.2.2"
requests = ">=2.32.0"
tqdm = ">=4.66.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-include = ["*.ipynb"]
extend-exclude = [".venv"]
line-length = 119

[tool.pytest.ini_options]
log_level = "DEBUG"
python_files = ["*.py"]
python_functions = ["test_*"]
